# CellScript

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  README_CH.md  README_CN.md
.github/workflows/: ci.yml
docs/: CELLSCRIPT_0_12_COMPREHENSIVE_PLAN.md  CELLSCRIPT_0_12_MIGRATION_NOTES.md  CELLSCRIPT_0_12_RELEASE_EVIDENCE.md  CELLSCRIPT_0_13_RELEASE_NOTES_DRAFT.md  CELLSCRIPT_0_13_ROADMAP.md  CELLSCRIPT_0_13_TODOLIST.md  CELLSCRIPT_0_14_RELEASE_NOTES_DRAFT.md  CELLSCRIPT_0_14_ROADMAP.md  CELLSCRIPT_0_15_ROADMAP.md  CELLSCRIPT_0_16_ROADMAP.md  CELLSCRIPT_CAPACITY_AND_BUILDER_CONTRACT.md  CELLSCRIPT_CKB_DEPLOYMENT_MANIFEST.md  CELLSCRIPT_CKB_FOUNDATION_GRANT_PROPOSAL_DRAFT.md  CELLSCRIPT_CKB_LANGUAGE_AUDIT.md  CELLSCRIPT_CKB_PROFILE_AUTHORING.md  CELLSCRIPT_COLLECTIONS_SUPPORT_MATRIX.md  CELLSCRIPT_DUAL_CHAIN_PACKAGE_REGISTRY_DESIGN.md  CELLSCRIPT_DUAL_CHAIN_PRODUCTION_PLAN.md  CELLSCRIPT_ENTRY_WITNESS_ABI.md  CELLSCRIPT_EXAMPLE_BUSINESS_FLOWS.md  CELLSCRIPT_LINEAR_OWNERSHIP.md  CELLSCRIPT_MODEL_SUPPORT_AUDIT_2026-04-24.md  CELLSCRIPT_MUTATE_AND_REPLACEMENT_OUTPUTS.md  CELLSCRIPT_ROADMAP.md  CELLSCRIPT_ROADMAP_OVERVIEW.md  CELLSCRIPT_RUNTIME_ERROR_CODES.md  CELLSCRIPT_SCHEDULER_HINTS.md  CELLSCRIPT_SURFACE_ELEGANCE_RFC.md  CLI_ERGONOMICS_AND_BLAKE2B_AUDIT.md  SPORA_DSL_DESIGN_PROPOSAL.md  SPORA_DSL_DESIGN_PROPOSAL2.md  STANDALONE_REPOSITORY.md
docs/examples/: ckb_hashing.md  collections_matrix.md  deployment_manifest.md  mutate_append.md
docs/wiki/: CKB-Glossary.md  Cookbook-Recipes.md  Home.md  Tutorial-01-Getting-Started.md  Tutorial-02-Language-Basics.md  Tutorial-03-Resources-and-Cell-Effects.md  Tutorial-04-Packages-and-CLI-Workflow.md  Tutorial-05-CKB-Target-Profile.md  Tutorial-05-CKB-Target-Profiles.md  Tutorial-05-Spora-and-CKB-Target-Profiles.md  Tutorial-06-Metadata-Verification-and-Production-Gates.md  Tutorial-07-LSP-and-Tooling.md  Tutorial-08-Bundled-Example-Contracts.md  _Sidebar.md
editors/vscode-cellscript/: .vscodeignore  CHANGELOG.md  LICENSE.md  README.md  extension.js  package.json  (+2 more)
examples/: amm_pool.cell  launch.cell  multisig.cell  nft.cell  registry.cell  timelock.cell  token.cell  vesting.cell
roadmap/: CELLSCRIPT_0_13_ROADMAP.md  CELLSCRIPT_0_14_ROADMAP.md  CELLSCRIPT_0_15_ROADMAP.md  CELLSCRIPT_0_16_ROADMAP.md  CELLSCRIPT_ROADMAP_OVERVIEW.md
scripts/: cellscript_ckb_release_gate.sh  ckb_cellscript_acceptance.sh  validate_cellscript_tooling_release.py  validate_ckb_cellscript_production_evidence.py
src/: lib.rs  main.rs  repl.rs  runtime_errors.rs  simulate.rs
tests/: adversarial_0_13.rs  backend_shape_baseline.json  cli.rs  examples.rs  fuzzy_debug.rs  v0_14.rs
tools/ckb-tx-measure/: Cargo.toml  README.md
(+50 files in other folders)
