[package]
name = "cellscript"
version = "0.1.0"
edition = "2021"
rust-version = "1.85.0"
authors = ["CellScript Core Team"]
description = "CellScript compiler for CKB and Spora blockchain"
license = "MIT"
repository = "https://github.com/tsukifune-kosei/CellScript"
exclude = [
    ".github/",
    "docs/wiki/",
    "editors/",
]

[[bin]]
name = "cellc"
path = "src/main.rs"
test = false

[lib]
name = "cellscript"
path = "src/lib.rs"

[dependencies]
thiserror = "1.0"
anyhow = "1.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
blake3 = "=1.8.2"
toml = "0.8"
hex = "0.4"

dashmap = "6.0"
indexmap = "=2.2.6"

log = "0.4"
env_logger = "0.11"

# CLI
clap = { version = "=4.5.49", features = ["derive"] }

colored = "2.1"

camino = "1.1"
ckb-vm = { version = "0.24", features = ["asm", "detect-asm"], optional = true }

[features]
default = []
vm-runner = ["dep:ckb-vm"]

[dev-dependencies]
pretty_assertions = "1.4"
tempfile = "3.10"
