[package]
name = "cellscript-ckb-tx-measure"
version = "0.1.0"
edition = "2021"
rust-version = "1.85.0"
publish = false

[workspace]

[[bin]]
name = "cellscript-ckb-tx-measure"
path = "../../src/bin/ckb_tx_measure.rs"

[dependencies]
ckb-jsonrpc-types = { path = "../../../../ckb/util/jsonrpc-types" }
ckb-types = { path = "../../../../ckb/util/types" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
